logs/python-sweety.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_sweety-0.2.26.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sweety'...
Compiling './lib/python3.5/site-packages/sweety/lock.py'...
***   File "./lib/python3.5/site-packages/sweety/lock.py", line 33
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sweety/prettytable.py'...
***   File "./lib/python3.5/site-packages/sweety/prettytable.py", line 163
    raise AttributeError, name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sweety/program.py'...
***   File "./lib/python3.5/site-packages/sweety/program.py", line 121
    print 'Verison: %s' % self.prog_info.PROG_VERSION
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sweety/util.py'...
***   File "./lib/python3.5/site-packages/sweety/util.py", line 28
    def touch(name, makedirs = True, mode = 0777):
                                               ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/sweety/valuebag.py'...
***   File "./lib/python3.5/site-packages/sweety/valuebag.py", line 46
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
